src/components/common/searchBar.module.css
.container {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  pointer-events: auto;
}

.content {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
}

.searchBar {
  margin: 2rem 1rem 0 1rem;
  width: 80%;
  padding: 0 1rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  border: 1px solid #7d7aff;
  border-radius: 8px;
  background-color: white;
}

.input {
  width: 100%;
  padding: 0.8rem 0.2rem;
  border-radius: 8px;
  border: none;
  outline: none;
}

.searchResult {
  width: 80%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0 1rem 1rem 1rem;
}

.element {
  width: 100%;
  padding: 0.8rem 1rem;
  font-size: 0.8rem;
  border-bottom: 1px solid #eee;
  transition: background-color 0.2s;
  cursor: pointer;
  background-color: white;
}

.element:hover {
  background-color: #f5f5ff;
}

.element:first-child {
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.element:last-child {
  border-bottom: none;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.modal {
  width: 100%;
  z-index: 1000;
  position: absolute;
  bottom: 0;
}

.rightModal {
  z-index: 105;
}

.modalOverlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 0.3);
  z-index: 999;
}

